--- a/index.html
+++ b/index.html
@@ -140,21 +140,15 @@ body:not(.gallery-dark-theme) .col .gallery-overlay {
           </div>
       </div>
       <div class="nav-wrapper container">
-          <a href="/pages/demo" class="brand-logo font-style"><i class="material-icons">camera</i>Mahaputera.art</a>
+          <a href="/" class="brand-logo font-style"><i class="material-icons">camera</i>Mahaputera.art</a>
           <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
           <ul class="right hide-on-med-and-down">
               <li><a href="/">Home</a></li>
-              <li class="active"><a href="/blog">Blog</a></li>
+              <li><a href="/blog">Blog</a></li>
               <li><a href="/archive">Archive</a></li>
-              <li>
-              <a class="dropdown-button" href="#" data-activates="feature-dropdown" data-belowOrigin="true" data-constrainWidth="true">Gallery<i class="material-icons right">arrow_drop_down</i></a>
-              </li>
-          </ul>
-          <!-- Dropdown Structure -->
-          <ul id="feature-dropdown" class="dropdown-content">
-              <li><a href="/gallery/painting">Painting</a></li>
-              <li><a href="/gallery/photo">Photo</a></li>
-              <li><a href="/gallery/market">Market</a></li>
+              <li><a href="https://painting.mahaputera.art">Painting</a></li>
+              <li class="active"><a href="https://photo.mahaputera.art">Photo</a></li>
+              <li><a href="https://market.mahaputera.art">Market</a></li>
           </ul>
       </div>
 
@@ -181,20 +175,20 @@ body:not(.gallery-dark-theme) .col .gallery-overlay {
     <li>
         <a href="/"><i class="material-icons">dashboard</i>Home</a>
     </li>
-    <li class="active">
+    <li>
         <a href="/blog"><i class="material-icons">article</i>Blog</a>
     </li>
     <li>
         <a href="/archive"><i class="material-icons">event</i>Archive</a>
     </li>
     <li>
-        <a href="/gallery/painting"><i class="material-icons">palette</i> Painting</a>
+        <a href="https://painting.mahaputera.art"><i class="material-icons">palette</i> Painting</a>
+    </li>
+    <li class="active">
+        <a href="https://photo.mahaputera.art"><i class="material-icons">camera_alt</i> Photo</a>
     </li>
     <li>
-        <a href="/gallery/photo"><i class="material-icons">camera_alt</i> Photo</a>
-    </li>
-    <li>
-        <a href="/gallery/market"><i class="material-icons">local_mall</i> Market</a>
+        <a href="https://market.mahaputera.art"><i class="material-icons">local_mall</i> Market</a>
     </li>
   </ul>
 
