--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@ body:not(.gallery-dark-theme) .col .gallery-overlay {
           <a href="/" class="brand-logo font-style"><i class="material-icons">camera</i>Mahaputera.art</a>
           <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
           <ul class="right hide-on-med-and-down">
-              <li><a href="/">Home</a></li>
-              <li><a href="/blog">Blog</a></li>
-              <li><a href="/archive">Archive</a></li>
+              <li><a href="https://mahaputera.art">Home</a></li>
+              <li><a href="https://mahaputera.art/blog">Blog</a></li>
+              <li><a href="https://mahaputera.art/archive">Archive</a></li>
               <li><a href="https://painting.mahaputera.art">Painting</a></li>
               <li class="active"><a href="https://photo.mahaputera.art">Photo</a></li>
               <li><a href="https://market.mahaputera.art">Market</a></li>
@@ -173,13 +173,13 @@ body:not(.gallery-dark-theme) .col .gallery-overlay {
   </nav>
   <ul class="side-nav" id="nav-mobile">
     <li>
-        <a href="/"><i class="material-icons">dashboard</i>Home</a>
+        <a href="https://mahaputera.art"><i class="material-icons">dashboard</i>Home</a>
     </li>
     <li>
-        <a href="/blog"><i class="material-icons">article</i>Blog</a>
+        <a href="https://mahaputera.art/blog"><i class="material-icons">article</i>Blog</a>
     </li>
     <li>
-        <a href="/archive"><i class="material-icons">event</i>Archive</a>
+        <a href="https://mahaputera.art/archive"><i class="material-icons">event</i>Archive</a>
     </li>
     <li>
         <a href="https://painting.mahaputera.art"><i class="material-icons">palette</i> Painting</a>
