--- a/index.html
+++ b/index.html
@@ -195,35 +195,33 @@ body:not(.gallery-dark-theme) .col .gallery-overlay {
   <!-- Gallery -->
   <div id="portfolio" class="section gray">
       <div class="b row">
-          <div class="col l4 m6 s12 gallery-item gallery-expand ce polygon">
+        {% for post in site.posts %}
+          <div class="col l4 m6 s12 gallery-item gallery-expand ce {{ post.categories }}">
               <div class="gallery-curve-wrapper">
                   <a class="gallery-cover gray">
-                      <img class="responsive-img" src="https://i.postimg.cc/KjpfLFQx/DSC00031.jpg" alt="placeholder" crossorigin="anonymous" />
+                      <img class="responsive-img" src="{{ post.image }}" alt="placeholder" crossorigin="anonymous" />
                   </a>
                     <div class="gallery-overlay">
                         <div class="overlay-header">
-                            <div class="overlay-title">Aquamarine</div>
+                            <div class="overlay-title">{{ post.title }}</div>
                         </div>
                     </div>
                   <div class="gallery-body">
                       <div class="title-wrapper">
-                          <h3>Aquamarine</h3>
-                          <span class="gj">$29.99</span>
+                          <h3>{{ post.title }}</h3>
+                          <span class="gj">{{ post.location }}</span>
                       </div>
                       <p class="fi">
-                          Desc 1
-                      </p>
-                      <p class="fi">
-                          Desc 1
+                        {{ post.description }}
                       </p>
                       <div class="carousel-wrapper">
-                          <div class="t carousel">
-                              <a class="carousel-item" href="#one!"><img src="//cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-sun.jpg?v=5328726480767926026" crossorigin="anonymous" /></a>
-                              <a class="carousel-item" href="#two!"><img src="//cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-maze.jpg?v=14238163633299520814" crossorigin="anonymous" /></a>
-                              <a class="carousel-item" href="#three!"><img src="//cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-ice.jpg?v=10474404842800237238" crossorigin="anonymous" /></a>
-                              <a class="carousel-item" href="#four!"><img src="//cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-cave.jpg?v=13127282243134125143" crossorigin="anonymous" /></a>
-                              <a class="carousel-item" href="#five!"><img src="//cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-grapefruit.jpg?v=4070483676604165442" crossorigin="anonymous" /></a>
-                          </div>
+                            <div class="t carousel">
+                                {% for subpost in site.posts %}
+                                    {% if subpost.categories == post.categories %}
+                                        <a class="carousel-item" href="#{{ subpost.title }}"><img src="{{ subpost.image }}" crossorigin="anonymous" /></a>
+                                    {% endif %}
+                                {% endfor %}
+                            </div>
                       </div>
                   </div>
                   <div class="gallery-action">
@@ -231,6 +229,7 @@ body:not(.gallery-dark-theme) .col .gallery-overlay {
                   </div>
               </div>
           </div>
+        {% endfor %}
           <div class="col l4 m6 s12 gallery-item gallery-expand ce polygon">
               <div class="gallery-curve-wrapper">
                   <a class="gallery-cover gray">
