change structure data

--- a/index.html
+++ b/index.html
@@ -164,6 +164,8 @@ body:not(.gallery-dark-theme) .col .gallery-overlay {
           <div class="categories-container">
               <ul class="categories container">
                   <li class="active"><a href="#all">All</a></li>
+                  <li><a href="#nature">Nature</a></li>
+                  <li><a href="#culture">Culture</a></li>
                   <li><a href="#polygon">Polygon</a></li>
                   <li><a href="#bigbang">Big Bang</a></li>
                   <li><a href="#sacred">Sacred Geometry</a></li>
